# example-ble-control

./: .editorconfig  .gitignore  .gitlab-ci.yml  license  pyproject.toml  readme.adoc  readme.md  requirements.txt
central/: capbotctl.py  cb-blectl.py
controller/: capbotctl.py  pyproject.toml
peripheral/: CMakeLists.txt  prj.conf  west.yml
peripheral/boards/kul/capbot/: Kconfig.capbot  board.cmake  board.yml  capbot.dts  capbot_defconfig
peripheral/inc/: capbot.h
peripheral/src/: capbot.c  capbot_adc.c  capbot_io.c  capbot_motor.c  main.c  robot_control_service.c
robot/: CMakeLists.txt  west-ncs-v2.7.0.yml  west-ncs-v2.8.0.yml  west-ncs-v2.9.0.yml
robot/boards/kul/capbot/: Kconfig.defconfig  capbot-pinctrl.dtsi  capbot.dts
robot/boards/kul/capbot/dts/bindings/: dc-motor-hall.yml
robot/inc/: capbot.h  rcs.h  robot_control_service.h
robot/src/: capbot_motor.c  main.c  rcs.c  robot_control_service.c
