[project]
name = "capbot-ble-control"
version = "0.1a"
description = "Control CapBots using Bluetooth Low Energy"
authors = [{ name = "Lowie Deferme", email = "lowie.deferme@kuleuven.be" }]

requires-python = ">=3.8"
dependencies = ["bleak >= 0.22.3"]

[project.optional-dependencies]
dev-ctl = [
    "ruff", # Python formatter/linter
    "mypy", # Python type checker
]
dev-robot = [
    "west",  # Zephyr's meta tool
    "pyocd", # Flashing and debugging tool
]

[tool.setuptools]
py-modules = []

[tool.ruff]
exclude = ["venv"]
show-fixes = true
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = [ # See https://docs.astral.sh/ruff/rules for list of rules
    "F", # Pyflakes
    "E", # Pycodestyle errors
    "W", # Pycodestyle warnings
    "I", # Isort
    "N", # PEP8 naming
    "D", # Pydocstyle
]
ignore = [
    "D105", # Missing docstring in magic method
    "D203", # Incorrect blank line before class
    "D212", # Multi-line summary first line
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_no_return = true
warn_unreachable = true
