[project]
name = "capbotctl"
version = "0.1a"
dependencies = ["bleak == 0.22.3"]

[tool.ruff]
show-fixes = true
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = [ # See https://docs.astral.sh/ruff/rules for list of rules
    "F", # Pyflakes
    "E", # Pycodestyle errors
    "W", # Pycodestyle warnings
    "I", # Isort
    "N", # PEP8 naming
    "D", # Pydocstyle
]
ignore = [
    "D105", # Missing docstring in magic method
    "D203", # Incorrect blank line before class
    "D212", # Multi-line summary first line
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_no_return = true
warn_unreachable = true
